Melhorias:
processo de pagamento
